--- a/style.css
+++ b/style.css
@@ -1,154 +1,234 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
 }
-
 
 :root {
-    --letras-main : #c0c0c0
+  --letras-main: #c0c0c0;
+  --botoes:  #1d80f8
 }
-#header{
-   background-color: #040714;
+#header {
+  background-color: #04071400;
 
-   padding: 15px;
-  /* position: fixed;
-   width: 98vw;*/
-    margin-top: -100px;
+  padding: 15px;
+  /*margin-top: -100px;*/
 
-    transition: 1s;
+  transition: 1s;
 }
-#cont-head{
-    display: flex;
-    justify-content: space-between;
-    
+#cont-head {
+  display: flex;
+  justify-content: space-between;
 }
-
-#btn{
-    display: flex;
-    
+#logo-header {
+  visibility: hidden;
 }
-#btn-assine{
-    padding: 10px 20px 10px 20px;
-    height: 3rem;
-
-    font-size: 18px;
-    border-radius: 10px;
-    background-color: #1d80f8;
-    color: #fff;
-
-    cursor: pointer;
-    margin-right: 5px;
+#btn {
+  display: flex;
 }
-#btn-assine:hover{
-    transition: 0.2s;
-    background-color: #3c94ff;
-}
+#btn-assine {
+  padding: 10px 20px 10px 20px;
+  height: 3rem;
+  font-size: 18px;
+  border-radius: 10px;
+  background-color: var(--botoes);
+  color: #fff;
 
-#btn-entrar{
-    padding: 10px 20px 10px 20px;
-    height: 3rem;
-    
-    cursor: pointer;
+  cursor: pointer;
+  margin-right: 5px;
 
-    border-radius: 10px;
-    border: solid 0.5px #fff;
-    background-color: transparent;
-    color: #fff;
-    font-size: 18px;
+  visibility: hidden;
 }
-#btn-entrar:hover{
-    transition: 0.5s;
-
-    color: #000;
-    background-color: #ffffff;
-}
-#main{
-    background-color: #040714;
+#btn-assine:hover {
+  transition: 0.2s;
+  background-color: #3c94ff;
 }
 
+#btn-entrar {
+  padding: 10px 30px 10px 30px;
+  height: 3rem;
 
-#conteiner-1{
-    display: grid;
-    grid-template-columns: 50%;
-    padding: 5.6vw;
-    padding-top: 18vw;
+  cursor: pointer;
 
-    background-image: url(img/back-1-md.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+  border-radius: 10px;
+  border: solid 0.5px #fff;
+  background-color: #040714;
+  color: #fff;
+  font-size: 18px;
 }
-#container-1-left{
-    margin-top: -100px;
+#btn-entrar:hover {
+  transition: 0.5s;
+
+  color: #000;
+  background-color: #ffffff;
+}
+#main {
+  background-color: #040714;
+  margin-top: -80px;
 }
 
-#combo{
+#conteiner-1 {
+  display: grid;
+  grid-template-columns: 50%;
+  padding: 5.6vw;
+  padding-top: 18vw;
+
+  background-image: url(img/back-1-md.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#container-1-left {
+  margin-top: -100px;
+}
+
+#combo {
+  width: 50%;
+  padding-left: 150px;
+}
+#frase-1 {
+  color: #fff;
+  text-align: center;
+  padding-right: 50px;
+}
+#assinar {
+  width: 100%;
+  padding: 30px;
+  margin-top: 25px;
+
+  border: none;
+  border-radius: 8px;
+
+  background-color: #016cf9;
+  color: #ffffff;
+  font-size: 18px;
+  cursor: pointer;
+}
+#sub {
+  font-size: 11px;
+  text-align: center;
+
+  margin-top: 15px;
+}
+#assinar-somente {
+  margin-top: 25px;
+  text-align: center;
+  font-size: 20px;
+}
+#assinar-somente p {
+  font-size: 18px;
+  margin-top: 10px;
+  color: var(--letras-main);
+}
+.material-icons-outlined {
+  margin-top: 50px;
+}
+.conteiner-conteudo {
+  padding: 5vw;
+  display: flex;
+
+  align-items: center;
+  line-height: 30px;
+}
+.conteiner-conteudo img {
+  width: 100%;
+}
+.content-imagem {
+  flex-basis: 150%;
+}
+.content {
+  padding: 50px;
+}
+.content h2 {
+  font-size: 40px;
+}
+.content p {
+  color: var(--letras-main);
+  font-size: 20px;
+}
+#btn-content{
+    background-color: var(--botoes);
+
+    margin-top: 20px;
+    padding: 20px 30px 20px 30px;
     width: 50%;
-    padding-left: 150px;
-}
-#frase-1{
-    color: #fff;
-    text-align: center;
-    padding-right: 50px;
-}
-#assinar{
-    width: 100%;
-    padding: 30px;
-    margin-top: 25px;
 
     border: none;
-    border-radius: 8px;
+    border-radius: 5px;
 
-    background-color: #016CF9;
-    color: #ffffff;
     font-size: 18px;
-    cursor: pointer;
-    
+    color: #f9f9f9;
 }
-#sub{
-    font-size: 11px;
-    text-align: center;
-
-    margin-top: 15px;
-}
-#assinar-somente{
-    margin-top: 25px;
-    text-align: center;
-    font-size: 20px;
-}
-#assinar-somente p{
-    font-size: 18px;
-    margin-top: 10px;
-    color: var(--letras-main)
-}
-.material-icons-outlined{
-    margin-top: 50px;
-    
-}
-#conteiner-2 {
+.conteiner-conteudo-final{
     padding: 5vw;
     display: flex;
-    
 
     align-items: center;
     line-height: 30px;
 }
-#conteiner-2 img{
-    width: 100%;
+#leao{
+    width: 90vw;
 }
-.content-imagem{
-    flex-basis: 150%;
+.text-content{
+    margin-left: -50%;
 }
-.content{
-    padding: 50px;
-}
-.content h2{
-    font-size: 40px;
-}
-.content p{
+.text-content p{
     color: var(--letras-main);
-    font-size: 20px;
+    font-size: 20px;}
+h2 {
+    font-size: 40px;
+  }
+  h3{
+      font-size: 28px;
+  }
+li{
+    list-style: none;
+    font-size: 18px;
+    color: silver;
+}
+
+.conteiner-dispo{
+    align-items: center;
+    text-align: center;
+    padding: 5.6vw;
+}
+#dispositivos{
+    display: flex;
+    line-height: 25px;
+    gap: 15px;
+    margin-top: 50px
+  }
+.dispo-img{
+    width: 20vw;
+}
+.conteiner-dispo ul{
+    margin-top: 5vh;
+}
+
+footer{
+    background-color: #040714;
+    text-align: center;
+    padding: 26px 8px;
+    
+    font-size: 12px;
+    line-height: 22px;
+}
+
+#logo-footer{
+    width: 80px;
+    height: 43px;
+}
+.links{
+    display: flex;
+    gap: 2vw;
+    margin: 4px auto 15px;
+
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap
+}
+#lingua{
+    background-color: transparent;
+    border: none;
 }
